--- a/index.html
+++ b/index.html
@@ -1,39 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
     <link rel="stylesheet" href="styles/portfolio.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
-            <ul>
+            <ul class="port">
                 <li>Portfolio</li>
                 <li>Blog</li>
                 <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
         <div class="banner">
-            <div>
+            <div class="mary">
                 <h3>Hi, I am</h3>
                 <h1>Mary Hardy</h1>
-                <div class="first"><p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p></div>
+                <div class="first">
+                    <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to
+                        society behaved moments.</p>
+                </div>
                 <button class="btn-second">Download CV</button>
                 <button class="btn-third">Contact</button>
             </div>
-            <img src="./images/hardy.png" alt="">
+            <div class="hardy">
+                <img src="./images/hardy.png" alt="">
+            </div>
         </div>
     </header>
-    <main>       
+    <main>
         <section class="first-title">
             <h1 class=title>About Me</h1>
             <div class="second-title">
-                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+                    websites that provide real value to the end user. Thousands of clients have procured exceptional
+                    resulfs while working with me. Delivering work within time and budget which meets clients
+                    requirements in our mata.</p>
             </div>
             <div class="type">
                 <div class="about-info">
@@ -53,42 +65,155 @@
                     <p class="about-description">Dhaka,bd</p>
                 </div>
             </div>
-            <div>
-            </div>
         </section>
-        <section class="first-sec">
+        <div class="first-sec">
             <h1 class="head">What I Do</h1>
-            <div class="first-head">
-                <p>I have more than 10 years experience building software for clients all over the world. Below is a quick 
-                    overview of my main technical skill sets and technologies i use. Want to find out more about my experience? 
-                    Check out my online resume and project portfolio</p>
-            </div>
-        </section>
+
+            <p>I have more than 10 years experience building software for clients all over the world. Below is a quick
+                overview of my main technical skill sets and technologies i use. Want to find out more about my
+                experience?
+                Check out my online resume and project portfolio</p>
+
+        </div>
         <div class="skill-container">
             <div class="skill">
                 <img src="./images/icons/js.png" alt="">
-                <p class="title-one">Vanlla Javascript</p>
-                <p class="decription">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt porro modi eveniet dicta asperiores, nesciunt aspernatur a ad omnis nemo.</p>
+                <p class="title-one">Vanilla Javascript</p>
+                <p class="decription">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt porro modi eveniet
+                    dicta asperiores, nesciunt aspernatur a ad omnis nemo.</p>
             </div>
             <div class="skill">
                 <img src="./images/icons/react.png" alt="">
                 <p class="title-one">React</p>
-                <p class="decription">Ea, consequuntur? Quisquam possimus consequuntur tempore, incidunt magni iusto quos asperiores quae accusamus quis rem magnam nostrum esse aliquam veritatis.</p>
+                <p class="decription">Ea, consequuntur? Quisquam possimus consequuntur tempore, incidunt magni iusto
+                    quos asperiores quae accusamus quis rem magnam nostrum esse aliquam veritatis.</p>
             </div>
             <div class="skill">
                 <img src="./images/icons/nodejs.png" alt="">
                 <p class="title-one">NodeJs</p>
-                <p class="decription">Ipsam, et autem repudiandae magnam cum fugit dolore dolor voluptas possimus vitae sed delectus minus. Veritatis officia quo perspiciatis minus?</p>
+                <p class="decription">Ipsam, et autem repudiandae magnam cum fugit dolore dolor voluptas possimus vitae
+                    sed delectus minus. Veritatis officia quo perspiciatis minus?</p>
             </div>
             <div class="skill">
                 <img src="./images/icons/mongo.png" alt="">
                 <p class="title-one">MongoDb</p>
-                <p class="decription">Quos rem modi nam excepturi reiciendis eum necessitatibus aspernatur, exercitationem ab molestiae doloremque, repellendus impedit vel vitae autem explicabo perferendis?</p>
+                <p class="decription">Quos rem modi nam excepturi reiciendis eum necessitatibus aspernatur,
+                    exercitationem ab molestiae doloremque, repellendus impedit vel vitae autem explicabo perferendis?
+                </p>
+            </div>
+        </div>
+        <div class="first-one">
+            <h1 class="summary">A summary of my resume</h1>
+            <div class="mas">
+                <div class="edu">
+                    <div class="first-edu">
+                        <h2 class="edu-title">My Education</h2>
+                        <h3 class="edu-title1">master in computer engineering</h3>
+                        <div class="edu-title2">
+                            <p>Harvard University / 2015 - 2017</p>
+                        </div>
+                        <div class="para">
+                            <p>List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="first-edu">
+                        <h2 class="edu-title">My Education</h2>
+                        <h3 class="edu-title1">master in computer engineering</h3>
+                        <div class="edu-title2">
+                            <p>Harvard University / 2015 - 2017</p>
+                        </div>
+                        <div class="para">
+                            <p>List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="first-edu">
+                        <h2 class="edu-title">My Education</h2>
+                        <h3 class="edu-title1">master in computer engineering</h3>
+                        <div class="edu-title2">
+                            <p>Harvard University / 2015 - 2017</p>
+                        </div>
+                        <div class="para">
+                            <p>List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="exp">
+                    <div class="first-edu">
+                        <h2 class="edu-title">My Experience</h2>
+                        <h3 class="edu-title1">Sr. Font End Developer</h3>
+                        <div class="edu-title2">
+                            <p>Harvard University / 2015 - 2017</p>
+                        </div>
+                        <div class="para">
+                            <p>List skill/technologies here. You can change the icon above to any of the 1500+
+                                FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </div>
+                    </div>
+                    <div class="first-edu">
+                        <h2 class="edu-title">My Experience</h2>
+                        <h3 class="edu-title1">Jr. Font End Developer</h3>
+                        <div class="edu-title2">
+                            <p>Harvard University / 2015 - 2017</p>
+                        </div>
+                        <div class="para">
+                            <p>List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.</p>
+                        </div>
+                    </div>
+                    <div class="first-edu">
+                        <h2 class="edu-title">My Experience</h2>
+                        <h3 class="edu-title1">HTML Developer</h3>
+                        <div class="edu-title2">
+                            <p>Harvard University / 2015 - 2017</p>
+                        </div>
+                        <div class="para">
+                            <p>List skill/technologies here. You can change the icon above
+                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
+                                dolor.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="btn">
+                <button class="btn-second">Download CV</button>
             </div>
         </div>
     </main>
-    <footer>
-</stdio.h>
+    <footer class="foot">
+        <div class="sep1">
+            <div>
+                <h1 class="connect">Lets Connect</h1>
+                <div class="para1">
+                    <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M
+                        ET, Monday through Friday.</p>
+                </div>
+                <a href="">
+                    <img class="img-src" src="./images/icons/facebook.png" alt="">
+                    <img class="img-src1" src="./images/icons/twitter.png" alt="">
+                    <img class="img-src2" src="./images/icons/insta.png" alt="">
+                </a>
+            </div>
+            <div>
+                <h1 class="lets">Let’s Message me</h1>
+                <form action="">
+                    <input class="name" type="text" name="" id="" placeholder="Your Name"><br>
+                    <input class="email" type="text" name="" id="" placeholder="Your Email"><br>
+                    <textarea class="messgae" name="" id="" cols="30" rows="10" placeholder="Message"></textarea><br>
+                    <button class="btn-btn">Submit</button>
+                </form>
+            </div>
+        </div>
     </footer>
 </body>
+
 </html>
