--- a/index.html
+++ b/index.html
@@ -5,75 +5,100 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Developer Portfolio</title>
+    <title>Tonmoy Portfolio</title>
+    <link rel="icon" href="./m1.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/portfolio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+
+    <script src="./js/script.js"></script>
+
+    <style>
+        /* img {
+            border-radius: 50%;
+            box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
+            /* border-radius: 100px; */
+        }
+
+        */
+    </style>
 </head>
 
-<body>
+<body class="body">
     <header class="header">
         <nav>
-            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
-            <ul class="port">
-                <li>Portfolio</li>
-                <li>Blog</li>
-                <li><button class="btn-primary">Hire Me</button></li>
-            </ul>
+            <h3 class="nav-title">Tonmo<span class="text-primary"></spanclass>y</span></h3>
+            <div class="port">
+                <a class="text_dec" href="#ban">Home</a>
+                <a class="text_dec" href="#card_grid">Skill</a>
+                <a class="text_dec" href="">Blog</a>
+                <a class="text_dec" href="#Connect">Contact</a>
+                <a class="text_dec" href="#about">About Me</a>
+            </div>
         </nav>
-        <div class="banner">
+        <div class="banner" id="ban">
             <div class="mary">
                 <h3>Hi, I am</h3>
-                <h1>Mary Hardy</h1>
+                <h1>Tonmoy Roy</h1>
                 <div class="first">
-                    <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to
-                        society behaved moments.</p>
+                    <p>I am passionate about creating beautiful and functional websites that people can use and enjoy. I
+                        am also always looking for new challenges and I am always learning new things.</p>
                 </div>
-                <button class="btn-second">Download CV</button>
+                <button class="btn-second" onclick="downloadCV()">Download CV</button>
                 <button class="btn-third">Contact</button>
             </div>
             <div class="hardy">
-                <img src="./images/hardy.png" alt="">
+                <img class="img1" src="./images/me51.png" alt="">
             </div>
         </div>
     </header>
     <main>
-        <section class="first-title">
-            <h1 class=title>About Me</h1>
-            <div class="second-title">
-                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
-                    websites that provide real value to the end user. Thousands of clients have procured exceptional
-                    resulfs while working with me. Delivering work within time and budget which meets clients
-                    requirements in our mata.</p>
-            </div>
-            <div class="type">
-                <div class="about-info">
-                    <p class="about-title">Name:</p>
-                    <p class="about-description">Mary Hardy</p>
-                </div>
-                <div class="about-info">
-                    <p class="about-title">Email:</p>
-                    <p class="about-description">info@gmail.com</p>
-                </div>
-                <div class="about-info">
-                    <p class="about-title">Date of birth:</p>
-                    <p class="about-description">11 Nov 1987</p>
-                </div>
-                <div class="about-info">
-                    <p class="about-title">From:</p>
-                    <p class="about-description">Dhaka,bd</p>
+        <div id="card2">
+            <div class="card mb-3" style="max-width: 400px; height: 70vh;" id="style_card">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="./images/emoji2.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8" id="card_text">
+                        <div class="card-body">
+                            <!-- <h5 class="card-title">Card title</h5> -->
+                            <h4 class="card-text">I'm a designer & developer with a passion for web design. I enjoy
+                                developing simple, clean and slick
+                                websites that provide real value to the end user. Thousands of clients have procured
+                                exceptional
+                                resulfs while working with me. Delivering work within time and budget which meets
+                                clients
+                                requirements in our mata.</h4>
+                            <!-- <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p> -->
+                        </div>
+                    </div>
                 </div>
             </div>
-        </section>
-        <div class="first-sec">
-            <h1 class="head">What I Do</h1>
-
-            <p>I have more than 10 years experience building software for clients all over the world. Below is a quick
-                overview of my main technical skill sets and technologies i use. Want to find out more about my
-                experience?
-                Check out my online resume and project portfolio</p>
-
+            <div class="card mb-3" style="max-width: 400px; height: 70vh;" id="style_car1">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="./images/emoji1.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <!-- <h5 class="card-title">Card title</h5> -->
+                            <p class="card-text">I have more than 2 years experience building software for clients all
+                                over
+                                the world. Below is a
+                                quick
+                                overview of my main technical skill sets and technologies i use. Want to find out more
+                                about
+                                my
+                                experience?
+                                Check out my online resume and project portfolio</p>
+                            <!-- <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="skill-container">
             <div class="skill">
@@ -103,108 +128,96 @@
             </div>
         </div>
         <div class="first-one">
-            <h1 class="summary">A summary of my resume</h1>
-            <div class="mas">
-                <div class="edu">
-                    <div class="first-edu">
-                        <h2 class="edu-title">My Education</h2>
-                        <h3 class="edu-title1">master in computer engineering</h3>
-                        <div class="edu-title2">
-                            <p>Harvard University / 2015 - 2017</p>
+            <h1 class="summary">My Skills</h1>
+            <div class="row row-cols-1 row-cols-md-3 g-4" id="card_grid">
+                <div class="col">
+                    <div class="card h-100" id="text_align">
+                        <div class=img_size>
+                            <img src="./images/h7.png" class="card-img-top" alt="...">
                         </div>
-                        <div class="para">
-                            <p>List skill/technologies here. You can change the icon above
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
-                                dolor.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="first-edu">
-                        <h2 class="edu-title">My Education</h2>
-                        <h3 class="edu-title1">master in computer engineering</h3>
-                        <div class="edu-title2">
-                            <p>Harvard University / 2015 - 2017</p>
-                        </div>
-                        <div class="para">
-                            <p>List skill/technologies here. You can change the icon above
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
-                                dolor.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="first-edu">
-                        <h2 class="edu-title">My Education</h2>
-                        <h3 class="edu-title1">master in computer engineering</h3>
-                        <div class="edu-title2">
-                            <p>Harvard University / 2015 - 2017</p>
-                        </div>
-                        <div class="para">
-                            <p>List skill/technologies here. You can change the icon above
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
-                                dolor.
-                            </p>
+                        <div class="card-body">
+                            <h1 class="card-title">HTML5</h1>
                         </div>
                     </div>
                 </div>
-                <div class="exp">
-                    <div class="first-edu">
-                        <h2 class="edu-title">My Experience</h2>
-                        <h3 class="edu-title1">Sr. Font End Developer</h3>
-                        <div class="edu-title2">
-                            <p>Harvard University / 2015 - 2017</p>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class=img_size>
+                            <img src="./images/bt6.png" class="card-img-top" alt="...">
                         </div>
-                        <div class="para">
-                            <p>List skill/technologies here. You can change the icon above to any of the 1500+
-                                FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <div class="card-body">
+                            <h1 class="card-title">BOOTSTRAP</h1>
                         </div>
                     </div>
-                    <div class="first-edu">
-                        <h2 class="edu-title">My Experience</h2>
-                        <h3 class="edu-title1">Jr. Font End Developer</h3>
-                        <div class="edu-title2">
-                            <p>Harvard University / 2015 - 2017</p>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class=img_size>
+                            <img src="./images/js7.png" class="card-img-top" alt="...">
                         </div>
-                        <div class="para">
-                            <p>List skill/technologies here. You can change the icon above
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
-                                dolor.</p>
-                        </div>
-                    </div>
-                    <div class="first-edu">
-                        <h2 class="edu-title">My Experience</h2>
-                        <h3 class="edu-title1">HTML Developer</h3>
-                        <div class="edu-title2">
-                            <p>Harvard University / 2015 - 2017</p>
-                        </div>
-                        <div class="para">
-                            <p>List skill/technologies here. You can change the icon above
-                                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget
-                                dolor.</p>
+                        <div class="card-body">
+                            <h1 class="card-title">JavaScript</h1>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="btn">
-                <button class="btn-second">Download CV</button>
+
+            <div class="row row-cols-1 row-cols-md-3 g-4" id="card_grid">
+                <div class="col">
+                    <div class="card h-100">
+                        <div class=img_size>
+                            <img src="./images/c_1.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h1 class="card-title">C</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class=img_size>
+                            <img src="./images/c++_4.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h1 class="card-title">C++</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class=img_size>
+                            <img src="./images/py5.jpg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body">
+                            <h1 class="card-title">PYTHON</h1>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
+        <!-- carousel -->
+        
+
     </main>
     <footer class="foot">
         <div class="sep1">
             <div>
-                <h1 class="connect">Lets Connect</h1>
+                <h1 class="connect" id="Connect">Lets Connect</h1>
                 <div class="para1">
                     <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M
                         ET, Monday through Friday.</p>
                 </div>
-                <a href="">
-                    <img class="img-src" src="./images/icons/facebook.png" alt="">
-                    <img class="img-src1" src="./images/icons/twitter.png" alt="">
-                    <img class="img-src2" src="./images/icons/insta.png" alt="">
-                </a>
+                <div class="logo">
+                    <a href="https://www.facebook.com/tonmoyroyyy/"><img class="img-src"
+                            src="./images/icons/icons8-facebook-24.png" alt=""></a>
+                    <a href=""><img class="img-src1" src="./images/icons/icons8-twitter-24.png" alt=""></a>
+                    <a href=""><img class="img-src2" src="./images/icons/icons8-instagram-24.png" alt=""></a>
+                    <a href="https://github.com/Tonmoy-Roy?tab=repositories"><img
+                            src="./images/icons/icons8-github-30.png" alt=""></a>
+                </div>
             </div>
             <div>
-                <h1 class="lets">Let’s Message me</h1>
+                <h1 class="lets">Let's Message me</h1>
                 <form action="">
                     <input class="name" type="text" name="" id="" placeholder="Your Name"><br>
                     <input class="email" type="text" name="" id="" placeholder="Your Email"><br>
