--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="port">
                 <a class="text_dec" href="#ban">Home</a>
                 <a class="text_dec" href="#card_grid">Skill</a>
-                <a class="text_dec" href="">Blog</a>
+                <a class="text_dec" href="#card2">Blog</a>
                 <a class="text_dec" href="#Connect">Contact</a>
                 <a class="text_dec" href="#about">About Me</a>
             </div>
@@ -99,6 +99,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div id="down">
+            <h1>Working On</h1>
         </div>
         <div class="skill-container">
             <div class="skill">
@@ -196,7 +199,7 @@
             </div>
         </div>
         <!-- carousel -->
-        
+
 
     </main>
     <footer class="foot">
