--- a/index.html
+++ b/index.html
@@ -211,12 +211,14 @@
                         ET, Monday through Friday.</p>
                 </div>
                 <div class="logo">
+                    <a href="https://github.com/Tonmoy-Roy?tab=repositories"><img
+                            class="img-src" src="./images/icons/icons8-github-30.png" alt=""></a>
+                    <a href="https://www.linkedin.com/in/tonmoy-roy-a922a1190/"><img
+                            class="img-src" src="./images/icons/icons8-linkedin-24.png" alt=""></a>
                     <a href="https://www.facebook.com/tonmoyroyyy/"><img class="img-src"
                             src="./images/icons/icons8-facebook-24.png" alt=""></a>
-                    <a href=""><img class="img-src1" src="./images/icons/icons8-twitter-24.png" alt=""></a>
-                    <a href=""><img class="img-src2" src="./images/icons/icons8-instagram-24.png" alt=""></a>
-                    <a href="https://github.com/Tonmoy-Roy?tab=repositories"><img
-                            src="./images/icons/icons8-github-30.png" alt=""></a>
+                    <a href=""><img class="img-src" src="./images/icons/icons8-twitter-24.png" alt=""></a>
+                    <a href=""><img class="img-src" src="./images/icons/icons8-instagram-24.png" alt=""></a>
                 </div>
             </div>
             <div>
