--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tonmoy Portfolio</title>
-    <link rel="icon" href="./m1.ico" type="image/x-icon">
+    <link rel="icon" href="./b.jpg" type="image/x-icon">
     <link rel="stylesheet" href="styles/portfolio.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,13 +17,7 @@
     <script src="./js/script.js"></script>
 
     <style>
-        /* img {
-            border-radius: 50%;
-            box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
-            /* border-radius: 100px; */
-        }
 
-        */
     </style>
 </head>
 
@@ -47,11 +41,11 @@
                     <p>I am passionate about creating beautiful and functional websites that people can use and enjoy. I
                         am also always looking for new challenges and I am always learning new things.</p>
                 </div>
-                <button class="btn-second" onclick="downloadCV()">Download CV</button>
+                <button class="btn-second" onclick="downloadCV()">Download Resume</button>
                 <button class="btn-third">Contact</button>
             </div>
             <div class="hardy">
-                <img class="img1" src="./images/me51.png" alt="">
+                <img class="img1" src="./images/1.jpg" alt="">
             </div>
         </div>
     </header>
@@ -65,40 +59,41 @@
                     <div class="col-md-8" id="card_text">
                         <div class="card-body">
                             <!-- <h5 class="card-title">Card title</h5> -->
-                            <h4 class="card-text">I'm a designer & developer with a passion for web design. I enjoy
+                            <p class="card-text">I'm a designer & developer with a passion for web design. I enjoy
                                 developing simple, clean and slick
                                 websites that provide real value to the end user. Thousands of clients have procured
                                 exceptional
                                 resulfs while working with me. Delivering work within time and budget which meets
                                 clients
-                                requirements in our mata.</h4>
+                                requirements in our mata.</p>
                             <!-- <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p> -->
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="card mb-3" style="max-width: 400px; height: 70vh;" id="style_car1">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="./images/emoji1.png" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <!-- <h5 class="card-title">Card title</h5> -->
-                            <p class="card-text">I have more than 2 years experience building software for clients all
-                                over
-                                the world. Below is a
-                                quick
-                                overview of my main technical skill sets and technologies i use. Want to find out more
-                                about
-                                my
-                                experience?
-                                Check out my online resume and project portfolio</p>
-                            <!-- <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p> -->
+            <a href="#section2" class="arrow-link">
+                <div class="arrow">
+                    <span></span>
+                    <span></span>
+                </div>
+            </a>
+
+            <section id="section2">
+                <div class="card mb-3" style="max-width: 400px; height: 70vh;" id="style_car1">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img src="./images/emoji1.png" class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <!-- <h5 class="card-title">Card title</h5> -->
+                                <p class="card-text">My goal is to contribute to a forward-thinking company where I can apply my knowledge and further develop my skills in software development and quality assurance. I am excited about the opportunity to collaborate with talented professionals and contribute to impactful projects</p>
+                                <!-- <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p> -->
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </div>
         <div id="down">
             <h1>Working On</h1>
@@ -211,12 +206,11 @@
                         ET, Monday through Friday.</p>
                 </div>
                 <div class="logo">
-                    <a href="https://github.com/Tonmoy-Roy?tab=repositories"><img
-                            class="img-src" src="./images/icons/icons8-github-30.png" alt=""></a>
-                    <a href="https://www.linkedin.com/in/tonmoy-roy-a922a1190/"><img
-                            class="img-src" src="./images/icons/icons8-linkedin-24.png" alt=""></a>
-                    <a href="https://www.facebook.com/tonmoyroyyy/"><img class="img-src"
-                            src="./images/icons/icons8-facebook-24.png" alt=""></a>
+                    <a href="https://github.com/Tonmoy-Roy?tab=repositories"><img class="img-src"
+                            src="./images/icons/icons8-github-30.png" alt=""></a>
+                    <a href="https://www.linkedin.com/in/tonmoy-roy-a922a1190/"><img class="img-src"
+                            src="./images/icons/icons8-linkedin-24.png" alt=""></a>
+                    <a href=""><img class="img-src" src="./images/icons/icons8-facebook-24.png" alt=""></a>
                     <a href=""><img class="img-src" src="./images/icons/icons8-twitter-24.png" alt=""></a>
                     <a href=""><img class="img-src" src="./images/icons/icons8-instagram-24.png" alt=""></a>
                 </div>
