--- a/index.html
+++ b/index.html
@@ -15,12 +15,9 @@
 
 
     <script src="./js/script.js"></script>
-
     <style>
-
     </style>
 </head>
-
 <body class="body">
     <header class="header">
         <nav>
@@ -45,7 +42,7 @@
                 <button class="btn-third">Contact</button>
             </div>
             <div class="hardy">
-                <img class="img1" src="./images/1.jpg" alt="">
+                <img class="img1" src="./images/2.jpeg" alt="">
             </div>
         </div>
     </header>
@@ -71,13 +68,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#section2" class="arrow-link">
-                <div class="arrow">
-                    <span></span>
-                    <span></span>
-                </div>
-            </a>
-
+            
             <section id="section2">
                 <div class="card mb-3" style="max-width: 400px; height: 70vh;" id="style_car1">
                     <div class="row g-0">
