--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h1>Tonmoy Roy</h1>
                 <div class="first">
                     <p>I am passionate about creating beautiful and functional websites that people can use and enjoy. I
-                        am also always looking for new challenges and I am always learning new things.</p>
+                        am always looking for new challenges and I am always learning new things.</p>
                 </div>
                 <button class="btn-second" onclick="downloadCV()">Download Resume</button>
                 <button class="btn-third">Contact</button>
